--- a/CONCOR_exmple.Rmd
+++ b/CONCOR_exmple.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "CONCOR Example"
 author: "Tyme Suda"
-date: "8/20/2019"
+date: "11/26/2019"
 output: 
   html_document: 
     keep_md: yes
@@ -17,8 +17,10 @@ Load in the required functions and data, igraph is required but is loaded when s
 
 ```{r CONCORsetup, include=TRUE, message=FALSE}
 load("HighTech.Rdata")
+library(igraph)
 source('CONCOR.R')
 source('CONCOR_supplemental_fun.R')
+source('CONCOR_blockmodeling.R')
 ```
 
 
@@ -40,7 +42,28 @@ m.list2=list(m0,m1)
 m.list3=list(m0,m1,m2)
 ```
 
-Once stored within a list CONCOR can be run. It will split the matrix and continue to split each subsequent, smaller matrix until the specified number of splits are made. If the specified number of splits would cause structurally equivalent nodes to be split, or a single node to be split, the CONCOR algorithm will fail. In addition, the current version seperates all isolated nodes into their own block before running concor.
+To check that both node names and adjacency matrix sizes, agree in adition to checking that node names exist (and adding them if they don't) the `concor.vlaiditycheck` function can be used. Below it can be seen that with valid input no warnigs are thrown, and this works even for a singular relation (where it simply checks that node names exist).
+```{r validity_check}
+m.list1=concor.vlaiditycheck(m.list1)
+m.list2=concor.vlaiditycheck(m.list2)
+m.list3=concor.vlaiditycheck(m.list3)
+```
+Now if there is something wrong with the inputs it starts to vigurously wave red flags at you, as shown below.
+
+```{r}
+m1=matrix(c(1,2,3,4),2)
+colnames(m1)=c("n","m")
+rownames(m1)=c("n","m")
+m2=matrix(c(5,6,7,8),2)
+
+#concor.vlaiditycheck(list(m1, m2)) fails and gives error: "Node name mismatch" due to m2 not having names but m1 having them
+concor.vlaiditycheck(list(m2, m2)) #adds node names but warns you that it did
+#concor.vlaiditycheck(list(m1, m0)) gives error: "Adgacency matrixes of mixmatched sizes" due to matrixies of differing sizes being inputed
+
+```
+
+
+Once the adgacency matrixies are stored within a list and they are confirmed to be valid inputs, CONCOR can be run. It will split the matrix and continue to split each subsequent, smaller matrix until the specified number of splits are made. If the specified number of splits would cause structurally equivalent nodes to be split, or a single node to be split, the CONCOR algorithm will fail. In addition, the current version seperates all isolated nodes into their own block before running concor.
 
 The output from concor is matrix with the first coumn being the block membership and the second being the node's name. The row names are simply the arbitrary order they are returned in.
 
@@ -95,7 +118,9 @@ C2.2
 
 Once CONCOR has been run and block membership is determined, there are a near unending number of things one can do to understand and represent the data. Two of the simplest ways are plotting the network with color representing block membership and blockmodeling. Functions to do both are included in the file `CONCOR_supplemental_fun.R`.
 
-To start either the CONCOR splits must be added as vertex attributes. This can be done using the function `blk.apply` from `CONCOR_supplemental_fun.R`. The inputs of this function are the igraph object you created the splits from, the split, and a name to give the new vertex attribute. This is shown below for all four splits for the advice nework from the Krackhardt high-tech managers data.
+To start either the CONCOR splits must be added as vertex attributes. This can be done using the function `blk.apply` if the CONCOR outputs have been previously saved or by simply using the `make.igraph` function that will run CONCOR and apply the outputs as the vertex attribute `csplitn` whre n is the split specified. Both functions are located in the `CONCOR_supplemental_fun.R` file. 
+
+The inputs of `blk.apply` are the igraph object you created the splits from, the split, and a name to give the new vertex attribute. This is shown below for all four splits for the advice nework from the Krackhardt high-tech managers data.
 
 ```{r addCONattrib}
 gadvice=blk.apply(gadvice, C1.1, "split1")
@@ -106,61 +131,102 @@ gadvice=blk.apply(gadvice, C1.4, "split4")
 gadvice
 ```
 
+The same can simply be be done without first running CONCOR by using `make.igraph` function on the list of adgacency matrixies you are intrested in and the split number you want, as shown below for the second split. This has the advantage of returning the split added to igraph objects for each relationship.
+
+```{r addCONattrib2}
+make.igraph(m.list2, 2)
+
+```
+While a thrid opption and probably the most usfull for this situation, of having igraph objects to start, is to run `concor.igraph.apply` on the list of igraph objects of intrest. This does the same thing as `make.igraph` but the input list is of igraph objects not the adgacency matrixies.
+
+```{r addCONattrib3}
+inp=list(gadvice, gfriend)
+#add first and second splits
+adv.freind.igraph=concor.igraph.apply(inp, 1)
+adv.freind.igraph=concor.igraph.apply(adv.freind.igraph, 2)
+adv.freind.igraph
+
+```
+The main reson to use this method is that any existing vertex atributes are kept unlike when using `make.igraph`.
+
 ### PLotting the network
 
-To plot the network with block memebership represented by a colour, the function `concor.plot` can be used from `CONCOR_supplemental_fun.R` simmply because it is easier than saying `plot(iobject, vertex.color=vertex.attributes(iobject)[[split.name]], vertex.label=NA, vertex.size= 5,edge.arrow.size=.3, main=tital)` every time you want to plot one of your networks. Although in all likelihood this function will need to be tweaked for individual use simply becuse you want your nodes to be a diffrent size or to use another colour scheme. The inputs for this function are the igraph object, the name of the split you want to represent, and a title.
+To plot the network with block memebership represented by a colour, the function `concor.plot` can be used from `CONCOR_supplemental_fun.R` simmply because it is easier than saying `plot(iobject, vertex.color=vertex.attributes(iobject)[[split.name]], vertex.label=NA, vertex.size= 5,edge.arrow.size=.3)` every time you want to plot one of your networks. Although in all likelihood this function will need to be tweaked for individual use simply becuse you want your nodes to be a diffrent size or to use another colour scheme. The inputs for this function are the igraph object, the name of the split you want to represent, and a title.
 
-The function is used below to plot the first and second splits of the advice network.
+The function is used below to plot the first and second splits of the advice network based off the splits found when using `gadvice` and `gfriend`.
 
 ``` {r plotNET}
-concor.plot(gadvice, "split1", "I am the first CONCOR split for the advice nework")
-concor.plot(gadvice, "split2", "And I am the second")
+concor.plot(adv.freind.igraph[[1]], 1)
+title(main="I am the first split")
+concor.plot(adv.freind.igraph[[1]], 2)
+title(main="And I am the second split")
+
+
 ```
 
 ### Blockmodeling
 
-Blockmodeling is something that is built into the library `statnet`, or more specifically its dependent package `SNA`. For the purposes of creating blockmodels based off the CONCOR outputs, a function that uses `statnet` was created called `make.blokmodel.stuff` in `CONCOR_supplemental_fun.R`. This function does a bit more than create a blockmodel, if its name was not telling enough. In fact it creates the blockmodel as created by 'statnet' but also produces igraph objects representing the reduced graph of the overall network.
+Blockmodeling is something that is built into the library `statnet`, or more specifically its dependent package `SNA`. For the purposes of creating blockmodels based off the CONCOR outputs, a function that uses `SNA` was created called `make.blk` in `CONCOR_blockmodeling`. This function creates a list of blockmodel type objects one for each relation inputed in the list `adj.list`, the first input for the specified CONCOR splitting (the second input). It must be noted that `adj.list` must be a list of adjacency matrixies even if only one relation is being looked at and the output is a list of the blokmedel type objects ready to be plotted with either `plot.blk` or `plot.blk.labeless` if the labels don't look good for your data.
 
-The inputs for this function are simply the igraph object representing your network and the name of the concor split as it has been saved in the object. This is ran below for the first and second splits for the advice network, the output for the first split is also shown.
+This is ran below for the second split for the advice and freindship networks treated as two relations.
 
-```{r make.blk.shit, message=FALSE, warning=FALSE}
-bl1=make.blokmodel.stuff(gadvice, "split1")
-bl2=make.blokmodel.stuff(gadvice, "split2")
-bl1
+```{r make.blk.shit}
+m0=get.adjacency(gadvice, sparse = FALSE)
+m1=get.adjacency(gfriend, sparse = FALSE)
+bl2=make.blk(list(m0,m1), 2)
+bl2
 ```
-
-Outputed from this function is a list. The first list element is the blockmodel object as `statnet` outputs it. The second element is an igraph object representing the reduced graph of the network based off the blockmodel, this output has unweighted connection values. The connections were determined to be existent if the density of a block was greater than the overall density of the network and zero if less. The third output is an igraph object representing the same reduced graph but the connections were kept weighted based of the density of the blocks. The final part of the output list is the density used as a cutoff for both reduced graphs.
 
 #### Ploting the blockmodel
 
-Ploting the blockmodel itself is as simple as just running the plot function on it due to it being built into the `SNA` package. Sadly customization options are limited. If the listing the node numbers bothers you (if you have a large nework they will) running `bl2[[1]]$plabels = rep("",length(bl2[[1]]$plabels))` where `bl2[[1]]` is the first ouput of `make.blokmodel.stuff` for your network.
+Each element of the outputed list can be ploted with either `plot.blk` or `plot.blk.labeless` the plots for the advice blockmodel are shown below. The first is with labels the second without.
 
-The simple plotting of the blockmodel is shown below for the second split. It was titled by using `bl2[[1]]$glabels = "title"` despite not having an option to.
 
-``` {r plot.block2}
-bl2[[1]]$glabels = "second CONCOR split of the advice network" 
-plot(bl2[[1]])
+```{r }
+
+plot.blk(bl2[[1]])
+plot.blk.labeless(bl2[[1]])
+
 ```
 
 Due to the high density of the connections in this network it is very hard to tell what is going on just from the blockmodel. To actually see how these blocks relate to each other it is much easier to look at the reduced graph.
 
-#### Plotting the Reduced Graphs
+#### Making the Reduced Graphs
 
-To plot the reduced graphs of the network the second and third ouputs from `make.blokmodel.stuff` are used. The second (non weighted) should be used if you don't care about the relative strength of the connections between blocks as long as they are stronger than the average density of the whole network. The second should be used if the relative strengths do matter to you.
+To plot the reduced graphs a couple of function calls must be made, adjacency matrixies for each reruced graph must be created. This is done by using the `make.red` function. It takes the list of adqacency matrixies of intrest (one for each relation), the split number you want, and whether you want the output weighted or not (TRUE/FALSE) as inputs. This function then outputs a nested list, the first element `$red.mat` is the list of reduced matrixies, and the second part of the list, `$dens`, is the list of cutoff densities used (densities of the overall networks). This is shown below for the second split of the advice and freindship networks treated as two relations when weighted and unweighted.
 
-For the unweighted reduced graph use the `reduced.plot` function (or just write your own depending on what you want it to do). This function plots the directed reduced graph with each separate block as a sperate colour. The color will corespond to that of the blocks in the whole network if the `concor.plot` function is used. The output for the advice network's second split is shown below.
-```{r unweight.red}
-reduced.plot(bl2)
+```{r }
+
+red.w=make.red(list(m0, m1), 2, weighted = TRUE)
+red.w
+red.uw=make.red(list(m0, m1), 2, weighted = FALSE)
+red.uw
+
 ```
 
-If the relative weight of the ties matter to you then the third output from `make.blokmodel.stuff` and the plot function `weighted.reduced.plot` should be used. This function works the same as `reduced.plot` but sizes the links are dependent on the weight of those ties. An example of this for the second split of the advice network is shown below.
+Once the reduced matrixies are made they can be plotted in igraph as networks by using the `make.red.igraph` function to make them into igraph objects then using `plot.red.weighted` or `plot.red.unweighted` depending on if they are weighted or not. Below The graphs of the weighted and unweighted reduced network plots for both the advice and freindship networks are shown.
 
-```{r weight.red}
-weighted.reduced.plot(bl2)
+```{r}
+
+w.adv=make.red.igraph(red.w$red.mat[[1]])
+plot.red.weighted(w.adv)
+title(main="Advice Weighted")
+
+uw.adv=make.red.igraph(red.uw$red.mat[[1]])
+plot.red.unweighted(uw.adv)
+title(main="Advice Unweighted")
+
+
+
+w.frn=make.red.igraph(red.w$red.mat[[2]])
+plot.red.weighted(w.frn)
+title(main="Freindship Weighted")
+
+uw.frn=make.red.igraph(red.uw$red.mat[[2]])
+plot.red.unweighted(uw.frn)
+title(main="Freindship Unweighted")
+
+
 ```
-
-For this network very little is visually gained from keeping the ties weighted except that the connections seem pretty evenly weighted.
-
-
 
 
